Images are actually correctly aligned.

--- a/views/cdn/css/public.css
+++ b/views/cdn/css/public.css
@@ -30,7 +30,6 @@ body {
     display: inline-block;
 }
 .robot-image {
-    max-height: 30em;
+    max-width: 30em;
     margin-left: 10em;
-    margin-right: 10em;
 }
